hphp/test/zend/good/Zend/tests/sub_001.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot perform mathematical operation on HH\vec and HH\vec' in %s/sub_001.php:6
Stack trace:
%A
